# flutter-web-server

./: .env  Cargo.toml  README.md  vercel.json
api/: hello.rs  index.rs
src/: about.html  index.html  lib.rs  main.rs  movie.html  movie.rs
