[package]
name = "dbconnect"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
dotenv = "0.15"
hyper = "1.8.1"
vercel_runtime = "1"
vercel_axum = "1.1.6"
tokio = { version = "1", features = ["full"] }

